--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <header>
             <iframe src="https://scapes.punkscape.xyz/?simple&autoplay&autoscale=false&chapter-switch=false&sound-control=false#4894" frameborder="0" tabindex="-1"></iframe>
-            <img src="marka-you-go-girl-is-a-legend.png" alt="marka one day punk">
+            <img src="9007-scape-bg.png" alt="marka one day punk">
         </header>
 
         <section>
