--- a/index.html
+++ b/index.html
@@ -33,15 +33,22 @@
             <p>Only those who will risk going too far can possibly find out how far one can go.</p>
 
             <ul>
-                <li>
+                <!-- <li>
                     <a href="mailto:makingmemark@gmail.com">Mail</a>
+                </li> -->
+                <li>
+                    <a href="https://twitter.com/marka_eth" target="_blank">Twitter/X</a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/marka_eth" target="_blank">Twitter</a>
+                    <a href="https://warpcast.com/marka" target="_blank">Warpcast</a>
                 </li>
+                
                 <li>
+                    <a href="https://opensea.io/collection/genl/overview" target="_blank">Generational Lines</a>
+                </li>
+                <!-- <li>
                     <a href="https://github.com/makingmemark" target="_blank">Github</a>
-                </li>
+                </li> -->
             </ul>
              <span class="audio"><img onclick="playAudio()" src = "audio.svg" alt="play/pause audio"/></span>
         </section>
