--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="mailto:makingmemark@gmail.com">Mail</a>
                 </li> -->
                 <li>
-                    <a href="https://twitter.com/marka_eth" target="_blank">Twitter/X</a>
+                    <a href="https://x.com/marka_eth" target="_blank">X</a>
                 </li>
                 <li>
                     <a href="https://warpcast.com/marka" target="_blank">Warpcast</a>
