--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 <li>
                     <a href="https://opensea.io/collection/genl/overview" target="_blank">Generational Lines</a>
                 </li>
+                <li>
+                    <a href="https://opensea.io/collection/degenerativegames" target="_blank">Degenerative Games</a>
+                </li>
                 <!-- <li>
                     <a href="https://github.com/makingmemark" target="_blank">Github</a>
                 </li> -->
