--- a/sic.html
+++ b/sic.html
@@ -13,7 +13,7 @@
     <main>
         <div class="search">
             <div class="search-container">
-                    <p>Enter the wallet address (0x or ENS) that you used to inscribed on the <strong><i>Relic</i></strong> contract</p>
+                    <p>Enter the wallet address (0x or ENS) that you used to inscribe on the <strong><i>Relic</i></strong> contract</p>
                     <input type="text" id="walletAddress" placeholder="Your wallet address">
                     <button id="searchButton">Search</button>
                     <div id="inscriptionResult"></div>
