--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         </header>
 
         <section>
-            <h1>marka.eth</h1>
-            <p>Only those who will risk going too far can possibly find out how far one can go.</p>
+            <h1 style="text-transform: lowercase;">marka.eth</h1>
+            <!-- <p>Only those who will risk going too far can possibly find out how far one can go.</p> -->
+            <p>creator // founder // punk 9007</p>
 
             <ul>
                 <!-- <li>
