--- a/sfc.html
+++ b/sfc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Squiggle Farewell Chart</title>
+    <title>Squiggle Farewell Chart / Timeline</title>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
